# scheduling

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json
backend/: .env  Cargo.toml  Dockerfile  Dockerfile copy  diesel.toml  docker-compose.yml
backend/migrations/2024-07-12-141708_create_tarefas/: up.sql
backend/migrations/2024-07-12-141708_create_usuario/: up.sql
backend/migrations/2024-07-12-150233_tarefa/: down.sql
backend/src/: config.rs  db.rs  main.rs  routes.rs  schema.rs
backend/src/tarefas/: models.rs
backend/src/user/: handlers.rs  mod.rs  models.rs  user_routes.rs
securitySchedule/: app.json  keys.ts  package-lock.json  package.json
securitySchedule/src/Views/CadastroView/: index.tsx  styles.tsx
securitySchedule/src/Views/LoginView/: index.tsx  styles.ts
securitySchedule/src/Views/TarefasView/: index.tsx  styles.ts
securitySchedule/src/app/: _layout.tsx
securitySchedule/src/app/(login)/: Cadastro.tsx  Login.tsx  Tarefas.tsx  _layout.tsx
securitySchedule/src/app/(login)/detalhesTarefa/: [detalhes].tsx
securitySchedule/src/constants/: server.ts
securitySchedule/src/constants/theme/: Colors.ts  fontSize.ts  index.ts
securitySchedule/src/utils/: createUserHandle.ts  encript.ts  loginHandle.ts  tarefasHandle.ts
server/: Cargo.toml  diesel.toml
src/: db.rs  main.rs  models.rs  schema.rs
