[package]
name = "todo_list_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
uuid = "1.0"
diesel_migrations = "2.0"
tokio = { version = "1.0", features = ["full"] }
r2d2 = "0.8"
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
